Optimización y simplicidad del código